--- a/RGU.DistibutedSystems.Launcher.App/App.xaml
+++ b/RGU.DistibutedSystems.Launcher.App/App.xaml
@@ -1,3 +1,9 @@
 ﻿<Application x:Class="RGU.DistibutedSystems.Launcher.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" />
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Application.Resources>
+        <ResourceDictionary>
+            <!-- TODO: Your resources can be placed here... -->
+        </ResourceDictionary>
+    </Application.Resources>
+</Application>
